@@ -20,6 +20,7 @@ TRUNK
 -   mod_external_services (XEP-0215)
 -   util.error for encapsulating errors
 -   MUC: support for XEP-0421 occupant identifiers
+-   mod_http_file_share: File sharing via HTTP (XEP-0363)
 
 0.11.0
 ======
